--- a/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
+++ b/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
@@ -14,14 +14,14 @@ Additional quality criteria were established before the start of the work. First
 \label{research-model}
 \section{Research Model}
 
-To solve the task described in chapter 1.2, this paper employs the \ac{CRISP-DM} \cite{CRISPDM2000}. This model puts forward a structure for conducting data mining projects. \ac{CRISP-DM} was developed in 1996 by three companies, which are now the partners of the \ac{CRISP-DM} consortium: NCR, DaimlerChrysler AG and SPSS Inc. 
+To solve the task described in Chapter 1.2, this paper employs the \ac{CRISP-DM} \cite{CRISPDM2000}. This model puts forward a structure for conducting data mining projects. \ac{CRISP-DM} was developed in 1996 by three companies, which are now the partners of the \ac{CRISP-DM} consortium: NCR, DaimlerChrysler AG and SPSS Inc. 
 
 A poll \cite{CRISPDMPopular2020} conducted among visitors of a data science project management blog found that almost half of all respondents employ the \ac{CRISP-DM} process model. Followed by Scrum and Kanban with a 18\% and 12\% of the user share, \ac{CRISP-DM} is by far the most popular. Other methods such as \ac{KDD} and \ac{SEMMA} are also noteworthy alternatives, but are less popular that CRISP-DM, Scrum and Kanban.
 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[height=10cm]{Bilder/Research_Model.png}
-	\caption{Adjusted CRISP-DM Model}
+	\caption[Adjusted CRISP-DM Model]{Adjusted CRISP-DM Model, based on \cite{CRISPDM2000}}
 	\label{fig:CRISM-DM}
 \end{figure}
 
@@ -33,5 +33,7 @@ Fourth, \ac{CRISP-DM} has no special requirements regarding team size or roles. 
 Fifth, the \ac{CRISP-DM} model was publicized in the context of a 70-page guide with generic task descriptions and outputs for each phase. The detailed guide is especially valuable for teams with little experience.
 
 Classically, the reference model consists of six phases. For this thesis the model was adapted to reflect all tasks encompassed. The phase "Dataset Selection" was added, resulting in a total of seven phases. The newly added phase includes the selection of a suitable dataset, the data retrieval, and the data provisioning. This results in a process model adapted to this specific project, and lays the groundwork for a successful undertaking.
+
+The thesis is constructed in such a way, that Chapters 4 to 10 each document one of the seven phases of the process.
 
  
