--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -15,24 +15,24 @@ How can information from invoice-like documents be extracted?
 How can extracted information provide insights?
 
 \section{Outline}
-The introductory chapter briefly explains the motivation behind the thesis. Also, the current situation is assessed and research questions are presented. Lastly, it presents the structure of the thesis.
+The introductory Chapter briefly explains the motivation behind the thesis. Also, the current situation is assessed and research questions are presented. Lastly, it presents the structure of the thesis.
 
-The following chapter about objectives and criteria gives a detailed task description, and established criteria. In the section \ref{research-model} the process model is explained, evaluated and adjusted.
+The following Chapter about objectives and criteria gives a detailed task description, and established criteria. In the section \ref{research-model} the process model is explained, evaluated and adjusted.
 
 Chapter 3 gives a glossary of terms. Chapter 3 sheds light on the corporate environment with respect to the aspects of history, organization an technological aspects. 
 
-The following chapters follow the structure of the research model presented in \ref{research-model}.
+The following Chapters follow the structure of the research model presented in \ref{research-model}.
 
-Chapter 4 explains the process of selecting a dataset. It presents fundamental types of projects and data sources. The chapter explains the sourcing of the used dataset.
+Chapter 4 explains the process of selecting a dataset. It presents fundamental types of projects and data sources. The Chapter explains the sourcing of the used dataset.
 
 Chapter 5 explains the business understanding.
 
 Chapter 6 explains the data understanding.
 
-In chapter 7, the preparation of the data is explained. The process of data cleaning is presented, as well as different means for feature extraction.
+In Chapter 7, the preparation of the data is explained. The process of data cleaning is presented, as well as different means for feature extraction.
 
 Chapter 8 compares algorithms and alternatives for measuring distances.
 
-Chapter 9 presents the evaluation of the result. The chapter evaluated the output from the previous steps.
+Chapter 9 presents the evaluation of the result. The Chapter evaluated the output from the previous steps.
 
-In chapter 10, a conclusion is drawn, and a further outlook is given.
+In Chapter 10, a conclusion is drawn, and a further outlook is given.
