--- a/Inhalt/04_Inhalt/content_deployment.tex
+++ b/Inhalt/04_Inhalt/content_deployment.tex
@@ -14,7 +14,7 @@
 	\centering
 	\includegraphics[width=\linewidth]{"../../../Pictures/Photos Library.photoslibrary/resources/derivatives/3/3A5CABAF-DE93-48E0-9081-6DAD2B650255_1_105_c"}
 	\caption{Tableau Dashboard: Overview on the largest Spending Categories}
-	
+	\label{fig:dashboard}
 \end{figure}
 
 	The dashboard answers all questions. First, it shows the big picture of spending. Additional insights are in the tool tips of each bubble in the chart. The table on the right hand side provides a convenient ranking of the different spending categories.
