--- a/Inhalt/04_Inhalt/content_modeling.tex
+++ b/Inhalt/04_Inhalt/content_modeling.tex
@@ -56,7 +56,7 @@ A distance measure is a quantification of how near objects in space are. Distanc
 		The difference between cosine distance and euclidean distance is clear: cosine measures the angle, and euclidean the vector length. But which one performs better in high dimensions? Cosine distance is perceived as more suitable for high dimensional data \cite[c.2.1.2.1]{40algorithms}, and often suggested for \ac{NLP} tasks. 
 		
 		But there is one fact left out in this suggestion: On normalized data (all vectors are unit vectors), cosine distance and euclidean distance are linearly connected \cite{khanRelationshipCosineSimilarity2020}.
-		
+		<
 		\begin{align*}
 			\cos(\theta_{AB}) &= {\mathbf{A} \cdot \mathbf{B} \over \|\mathbf{A}\| \|\mathbf{B}\|}  \\
 			\\
@@ -114,7 +114,7 @@ while (iterations < max_iterations):
 		\label{fig:kmeans-viz}
 		\end{figure}
 	
-		The k-Means algorithm performs reasonably well in identifying clusters in data such as in figure \ref{fig:kmeans-viz}. The left example seems unspectacular, but in the center example, it becomes obvious that k-Means is prone to overfit on noisy data. This can be partially blamed on the focus on centers, and not density. The focus on centers is also obvious in the rightmost example. While the data is quite evenly distributed over the area, the algorithm still groups the data. 
+		The k-Means algorithm performs reasonably well in identifying clusters in data such as in Figure \ref{fig:kmeans-viz}. The left example seems unspectacular, but in the center example, it becomes obvious that k-Means is prone to overfit on noisy data. This can be partially blamed on the focus on centers, and not density. The focus on centers is also obvious in the rightmost example. While the data is quite evenly distributed over the area, the algorithm still groups the data. 
 		
 		Implementations such as \ac{sklearn}'s \lstinline|MiniBatchKMeans| \cite{sklearn} speed up the computation time by processing subsets of the data in a parallel way. While only achieving almost perfect results \cite{sculleyWebscaleKmeansClustering2010}, the batched k-Means algorithm is of special appeal when handling large data sets.
 		
@@ -278,7 +278,7 @@ The \ac{DBSCAN} model identified the outlier data (\ref{fig:dbscan-outliers}), a
 \subsection{Determine the number of Clusters}
 The KMeans algorithm is parameterized with the number of clusters (\lstinline|n_clusters|). Since the algorithm itself is not able to determine the cluster count, this number has to be approximated.
 \cite{kodinariyaReviewDeterminingCluster2013} suggest several applicable methods, among them are rule of thumb, and the elbow method with a silhouette score.
-A good point for starting with choosing \lstinline|k| is the rule of thumb $k \approx \sqrt{\frac{n}{2}}$ with n being the number of instances in the dataset. Other literature also names the approximation of $k \approx log(n)$, but \cite{maierOptimalConstructionKnearest2009} showcase how $k$ should be chosen in the order of $n$. 
+A good point for starting with choosing $k$ is the rule of thumb $k \approx \sqrt{\frac{n}{2}}$ with n being the number of instances in the dataset. Other literature also names the approximation of $k \approx log(n)$, but \cite{maierOptimalConstructionKnearest2009} showcase how $k$ should be chosen in the order of $n$. 
 
 \begin{table}[!h]
 	\centering
@@ -299,7 +299,7 @@ A good point for starting with choosing \lstinline|k| is the rule of thumb $k \a
 \label{table:heuristic-k}
 \end{table}
 
-With the elbow method, the silhouette score of clustering results for different values of \lstinline|k| are visualized. 
+With the elbow method, the silhouette score of clustering results for different values of $k$ are visualized. 
 
 The silhouette score is a measure of how similar intra-cluster points are and at the same time how dissimilar inter-cluster points are. A silhouette score of 1, being the highest value, is the most desirable.
 
@@ -316,7 +316,7 @@ For $S = 1$, the relationship of $a(i)$ and $b(i)$ has to be $a(i) \gg b(i)$ so 
 
 Therefore, the task of the elbow method using the silhouette coefficient is to maximize $S$ while preventing overfitting.
 
-The above mentioned estimates (\ref{table:heuristic-k}) are a starting point for choosing values for k during the calculation of silhouette coefficients. The following simulation shows how the k-Means algorithm for these values of k performed.
+The above mentioned estimates (\ref{table:heuristic-k}) are a starting point for choosing values for $k$ during the calculation of silhouette coefficients. The following simulation shows how the k-Means algorithm for these values of $k$ performed.
 
  \begin{figure}[!h]
 	\centering
@@ -329,7 +329,7 @@ The chart \ref{fig:silhouette} shows how the silhouette coefficient behaves with
 
 The chart shows how the silhouette coefficient falls under the 0 threshhold. A negative silhouette coefficient means that points in one cluster were misclassified as they are more close to other clusters. This is an indicator of underfitting. 
 
-But not only the left hand side of the spectrum for k can cause problems. When increasing k, the silhouette coefficient rises. In fact, one could obtain a perfect silhouette coefficient of 1 by assigning each point its own cluster \cite{yildirimTwoChallengesKMeans2020}. But with rising number of clusters, the generalization becomes lower. Again, the goal is a useful generalization. And dividing a group of 79741 documents into 20.000 groups can not be considered a useful generalization.
+But not only the left hand side of the spectrum for $k$ can cause problems. When increasing $k$, the silhouette coefficient rises. In fact, one could obtain a perfect silhouette coefficient of 1 by assigning each point its own cluster \cite{yildirimTwoChallengesKMeans2020}. But with rising number of clusters, the generalization becomes lower. Again, the goal is a useful generalization. And dividing a group of 79741 documents into 20.000 groups can not be considered a useful generalization.
 
 So, even though the silhouette method is very helpful as a technical analysis, the business goals have to be kept in mind. The silhouette coefficient at 0 means that on average, no points were misclassified due to underfitting. This minimal requirement is satisfied with $k$=3250.
 
@@ -345,7 +345,7 @@ The training with k=3250 takes about four minutes. Most clusters formed are in t
 \end{figure}
 
 \subsection{Visualize cluster formation}
-For visualizing, the \ac{t-SNE} algorithm is used. This projection allows to visualize the 512 dimensions of the embeddings in a two-dimensional representation. In figure \ref{fig:kmeans}, the proximity of points stands for their close semantic relationship. Data points in the same color are contained in the same cluster. Since there are 3250 clusters, colors occur several times, even though they represent different clusters.
+For visualizing, the \ac{t-SNE} algorithm is used. This projection allows to visualize the 512 dimensions of the embeddings in a two-dimensional representation. In Figure \ref{fig:kmeans}, the proximity of points stands for their close semantic relationship. Data points in the same color are contained in the same cluster. Since there are 3250 clusters, colors occur several times, even though they represent different clusters.
 
 This visualization gives an overview on the clusters, but doesn't show what is contained in the clusters. For this, each cluster needs a topic.
 
